# sos24-server

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  Dockerfile.stg  Justfile  Makefile  README.md  compose-25prd.yml  docker-compose-beta.yml  docker-compose-db.yml  docker-compose-prd.yml  docker-compose-stg.yml  docker-compose.yml  schema.sql  schema.yml  stg-entrypoint.sh
crates/sos24-infrastructure/: Cargo.toml
crates/sos24-infrastructure/src/: email.rs  file_data.rs  file_object.rs  firebase.rs  firebase_user.rs  form.rs  form_answer.rs  health.rs  invitation.rs  lib.rs  mongodb.rs  news.rs  notification.rs  postgresql.rs  project.rs  s3.rs  sendgrid.rs  shared.rs  user.rs
crates/sos24-infrastructure/src/firebase/: firebase_user.rs
crates/sos24-infrastructure/src/mongodb/: form.rs  form_answer.rs
crates/sos24-infrastructure/src/postgresql/: file_data.rs  invitation.rs  news.rs  news_attachment.rs  project.rs  user.rs
crates/sos24-infrastructure/src/s3/: file_object.rs  news_attachment.rs
crates/sos24-infrastructure/src/sendgrid/: email.rs
crates/sos24-infrastructure/src/shared/: firebase.rs  mongodb.rs  postgresql.rs  s3.rs  sendgrid.rs
crates/sos24-presentation/: Cargo.toml
crates/sos24-presentation/src/: config.rs  context.rs  csv.rs  env.rs  error.rs  lib.rs  main.rs  model.rs  module.rs  route.rs  status_code.rs
crates/sos24-presentation/src/error/: convert_error.rs
crates/sos24-presentation/src/middleware/: auth.rs
crates/sos24-presentation/src/model/: file.rs  form.rs  form_answer.rs  invitation.rs  news.rs  news_attachment.rs  project.rs  project_application_period.rs  user.rs
crates/sos24-presentation/src/route/: file.rs  form.rs  form_answer.rs  health.rs  invitation.rs  news.rs  news_attachment.rs  project.rs  project_application_period.rs  shared.rs  user.rs
crates/sos24-presentation/src/route/file/: delete_by_id.rs  export.rs  get.rs  get_by_id.rs  post.rs
crates/sos24-presentation/src/route/form/: delete_by_id.rs  get.rs  get_by_id.rs  post.rs  put_by_id.rs
crates/sos24-presentation/src/route/form_answer/: export.rs  get.rs  get_by_id.rs  post.rs  put_by_id.rs
crates/sos24-presentation/src/route/invitation/: delete_by_id.rs  get.rs  get_by_id.rs  post.rs  post_by_id.rs
crates/sos24-presentation/src/route/news/: delete_by_id.rs  get.rs  get_by_id.rs  post.rs  put_by_id.rs
crates/sos24-presentation/src/route/project/: delete_by_id.rs  export.rs  get.rs  get_by_id.rs  get_me.rs  post.rs  put_by_id.rs
crates/sos24-presentation/src/route/project_application_period/: get.rs
crates/sos24-presentation/src/route/shared/: auth.rs
crates/sos24-presentation/src/route/user/: delete_by_id.rs  export.rs  get.rs  get_by_id.rs  get_me.rs  post.rs  put_by_id.rs
crates/sos24-use-case/: Cargo.toml
crates/sos24-use-case/src/: context.rs  dto.rs  error.rs  file.rs  form.rs  form_answer.rs  interactor.rs  invitation.rs  lib.rs  news.rs  project.rs  shared.rs  user.rs
crates/sos24-use-case/src/adapter/: email.rs
crates/sos24-use-case/src/dto/: authorization.rs  file.rs  form.rs  form_answer.rs  invitation.rs  news.rs  news_attachment.rs  project.rs  project_application_period.rs  user.rs
crates/sos24-use-case/src/dto/authorization/: news.rs  user.rs
crates/sos24-use-case/src/error/: news.rs  news_attachment.rs  user.rs
crates/sos24-use-case/src/file/: dto.rs  interactor.rs
crates/sos24-use-case/src/file/interactor/: create.rs  delete_by_id.rs  export_by_form_id.rs  export_by_owner.rs  find_by_id.rs  list.rs
crates/sos24-use-case/src/file/use_case/: create.rs  delete_by_id.rs  export_by_form_id.rs  export_by_owner.rs  find_by_id.rs  list.rs
crates/sos24-use-case/src/form/: dto.rs  interactor.rs  use_case.rs
crates/sos24-use-case/src/form/interactor/: check_form_and_send_notify.rs  create.rs  delete_by_id.rs  find_by_id.rs  find_by_project_id.rs  list.rs  send_reminder_email.rs  update.rs
crates/sos24-use-case/src/form/use_case/: create.rs  delete_by_id.rs  find_by_id.rs  find_by_project_id.rs  list.rs  update.rs
crates/sos24-use-case/src/form_answer/: dto.rs  interactor.rs  use_case.rs
crates/sos24-use-case/src/form_answer/interactor/: create.rs  export_by_form_id.rs  find_by_form_id.rs  find_by_id.rs  find_by_project_id.rs  list.rs  update.rs
crates/sos24-use-case/src/form_answer/use_case/: create.rs  export_by_form_id.rs  find_by_form_id.rs  find_by_id.rs  find_by_project_id.rs  list.rs  update.rs
crates/sos24-use-case/src/interactor/: file.rs  form.rs  form_answer.rs  invitation.rs  news.rs  news_attachment.rs  project.rs  user.rs
crates/sos24-use-case/src/interactor/file/: create.rs  delete_by_id.rs  export_by_form_id.rs  export_by_owner.rs  find_by_id.rs  list.rs
crates/sos24-use-case/src/interactor/form/: check_form_and_send_notify.rs  create.rs  delete_by_id.rs  find_by_id.rs  find_by_project_id.rs  list.rs  update.rs
crates/sos24-use-case/src/interactor/form_answer/: create.rs  export_by_form_id.rs  find_by_form_id.rs  find_by_id.rs  find_by_project_id.rs  list.rs  update.rs
crates/sos24-use-case/src/interactor/invitation/: create.rs  delete_by_id.rs  find_by_id.rs  find_or_create.rs  list.rs  receive.rs
crates/sos24-use-case/src/interactor/news/: create.rs  delete_by_id.rs  find_by_id.rs  list.rs  update.rs
crates/sos24-use-case/src/interactor/project/: create.rs  delete_by_id.rs  find_by_id.rs  find_owned.rs  get_project_application_period.rs  list.rs  update.rs
crates/sos24-use-case/src/interactor/user/: create.rs  delete_by_id.rs  find_by_id.rs  list.rs  update.rs
crates/sos24-use-case/src/invitation/: dto.rs  interactor.rs
crates/sos24-use-case/src/invitation/interactor/: delete_by_id.rs  find_by_id.rs  find_or_create.rs  (+2 more)
crates/sos24-use-case/src/news/: dto.rs  interactor.rs  use_case.rs
crates/sos24-use-case/src/project/: dto.rs  interactor.rs  query_service.rs  use_case.rs
crates/sos24-use-case/src/project_application_period/: dto.rs
crates/sos24-use-case/src/shared/: adapter.rs  app_url.rs  context.rs
crates/sos24-use-case/src/user/: dto.rs  interactor.rs  use_case.rs
(+225 files in other folders)
