[package]
name = "sos24-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
chrono = { version = "0.4.32", features = ["serde"] }
dotenvy = "0.15.7"
hyper = { version = "1.1.0", features = ["full"] }
jsonwebtoken = "9.2.0"
mongodb = "2.8.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
rs-firebase-admin-sdk = "1.2.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "tls-rustls",
] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
