[package]
name = "sos24-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
sos24-domain = { path = "../sos24-domain" }
sos24-use-case = { path = "../sos24-use-case" }
anyhow.workspace = true
async_zip.workspace = true
aws-sdk-s3.workspace = true
chrono.workspace = true
futures-util.workspace = true
mongodb.workspace = true
reqwest.workspace = true
rs-firebase-admin-sdk.workspace = true
sendgrid.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tempfile.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
url.workspace = true
