[package]
name = "sos24-presentation"
version.workspace = true
edition.workspace = true

[dependencies]
sos24-infrastructure = { path = "../sos24-infrastructure" }
sos24-use-case = { path = "../sos24-use-case" }
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
