[package]
name = "sos24-presentation"
version.workspace = true
edition.workspace = true

[dependencies]
sos24-infrastructure = { path = "../sos24-infrastructure" }
sos24-domain = { path = "../sos24-domain" }
sos24-use-case = { path = "../sos24-use-case" }
anyhow.workspace = true
axum.workspace = true
csv.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
