[package]
name = "sos24-presentation"
version.workspace = true
edition.workspace = true

[dependencies]
sos24-infrastructure = { path = "../sos24-infrastructure" }
sos24-domain = { path = "../sos24-domain" }
sos24-use-case = { path = "../sos24-use-case" }
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
csv.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true